syntax = "proto3";

option go_package = "scannerV1";

option java_package = "io.stackrox.proto.api.scanner.v1";

import "scanner/api/v1/note.proto";
import "scanner/api/v1/component.proto";

package scannerV1;

message GetNodeInventoryResponse {
    string                      node_name   = 1;
    Components                  components  = 2;
    repeated Note               notes       = 3;
}

message GetNodeInventoryRequest {}

// NodeInventoryService is used in Secured Clusters to fetch information from Nodes and communicate with other
// Secured Cluster components, like the compliance container in Collector.
service NodeInventoryService {
    rpc GetNodeInventory(GetNodeInventoryRequest) returns (GetNodeInventoryResponse) {}
}
